Fixed alignment of project section,changed to flex

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ header{
     top: 0;
     left: 0;
     background: #1a1a1a;
-    transition: all 400ms linear;
+    transition: all 400ms ease-in-out;
 }
 
 .mylogo{
@@ -130,7 +130,7 @@ section {
     min-height: 100vh;
     margin-left: 28%;
     padding: 1% 3%;
-    transition: all 400ms linear;
+    transition: all 400ms ease-in-out;
 }
 
 #Home{
@@ -168,15 +168,17 @@ section {
 }
 
 .lang_grid{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-    column-gap: 1rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .grid_item1{
     background: #222;
-    margin: 3%;
+    margin: 1%;
     border-radius: 1rem;
+    height: 10rem;
+    width: 20rem;
 }
 
 .lang_logo{
@@ -301,19 +303,20 @@ section {
 }
 
 .projects_grid{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-    column-gap: 6rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .project{
     background: var(--blue);
     border-radius: 2rem;
-    height: 25rem;
-    width: 28rem;
     text-decoration: none;
     margin-bottom: 2rem;
     color: var(--black);
+    margin: 1.5%;
+    width: 25rem;
+    height: 22rem;
 }
 
 .project_image{
@@ -416,11 +419,6 @@ textarea:focus{
     html{
         font-size: 60%;
     }
-
-    header{
-        position: fixed;
-        left: 0;
-    }
 }
 
 /* 980px */
@@ -430,7 +428,7 @@ textarea:focus{
     }
 
     header{
-        position: absolute;
+        position: fixed;
         left: -100rem;
         width: 30%;
     }
@@ -454,7 +452,6 @@ textarea:focus{
         -o-filter: blur(5px);
         -ms-filter: blur(5px);
         filter: blur(5px);
-        transition: all 400ms linear;
     }
 
     body{
@@ -490,6 +487,10 @@ textarea:focus{
 
     #About_Me{
         margin-bottom: 35%;
+    }
+
+    .grid_item1{
+        margin: 5%;
     }
 
     .item2{
